--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,13 @@
-<html>
-	<h1>No</h1>
+<!doctype html>
+<html lang=en>
+    <head>
+        <meta charset="utf-8">
+        <title>Is quarantine over yet?</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div class="container">
+            <h1 class="title">No</h1>
+        </div>
+    </body>
 </html>
