--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang=en>
     <head>
         <meta charset="utf-8">
+        <meta name="author" content="Jerred Shepherd">
         <title>Is quarantine over yet?</title>
         <link rel="stylesheet" href="style.css">
     </head>
