--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="container">
-            <h1 class="title">No</h1>
+            <h1 class="title"><a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/pdfs/choosingSaferAct.pdf">Yes</a></h1>
         </div>
     </body>
 </html>
